Fin du pokédex comme cahiers des charges

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
       <input type="text" id="search" placeholder="Rechercher un Pokémon..." />
       <ul id="pokemon-list"></ul>
     </div>
-    <div class="right-panel">
-      <div id="pokemon-details">
-        <h2>Détails du Pokémon</h2>
-        <div id="details-container">
-          <img id="image" src="" alt="Team Rocket a volé son image">
-          <p>Nom : <span id="name"></span></p>
-          <p>Types : <span id="types"></span></p>
-        </div>
-      </div>
+<div class="right-panel">
+  <div id="pokemon-details">
+    <h2>Détails du Pokémon</h2>
+    <div id="details-container">
+      <img id="image" src="" alt="Team Rocket a volé son image">
+      <p>Nom : <span id="name"></span></p>
+      <p>Types : <span id="types-container"></span></p> 
+      <p>Stats : <span id="stats"></span></p>
+      <p>Évolutions : <span id="evolutions"></span></p>
+      <p>Résistances : <span id="resistances"></span></p>
     </div>
   </div>
+</div>
 
   <script src="app.js"></script>
 </body>
